// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should annotate uncovered statements 1`] = `
Array [
  Object {
    "annotation_level": "warning",
    "end_column": 21,
    "end_line": 41,
    "message": "Statement is not covered",
    "path": "src/app.js",
    "start_column": 2,
    "start_line": 41,
  },
  Object {
    "annotation_level": "warning",
    "end_column": 10,
    "end_line": 58,
    "message": "Statement is not covered",
    "path": "src/app.js",
    "start_column": 4,
    "start_line": 58,
  },
  Object {
    "annotation_level": "warning",
    "end_column": 37,
    "end_line": 2,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_column": 16,
    "start_line": 2,
  },
  Object {
    "annotation_level": "warning",
    "end_column": 22,
    "end_line": 4,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_column": 17,
    "start_line": 4,
  },
  Object {
    "annotation_level": "warning",
    "end_column": 15,
    "end_line": 6,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_column": 2,
    "start_line": 6,
  },
]
`;

exports[`App should leave comment when coverage is below 100% 1`] = `
Object {
  "body": "<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💔 \`91.99%\`
Branches | 💔 \`93.75%\`
Functions | 💔 \`76.83%\`
Lines | 💔 \`92.61%\`",
  "headers": Object {
    "accept": "application/vnd.github.machine-man-preview+json",
    "authorization": "token installation-token",
  },
  "issueNumber": "1",
  "owner": "owner",
  "repo": "repo",
}
`;

exports[`App should leave comment when coverage is below 100% 2`] = `
Object {
  "body": "<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💚 \`100.0%\`
Branches | 💚 \`100.0%\`
Functions | 💔 \`80.00%\`
Lines | 💔 \`95.00%\`",
  "headers": Object {
    "accept": "application/vnd.github.machine-man-preview+json",
    "authorization": "token installation-token",
  },
  "issueNumber": "1",
  "owner": "owner",
  "repo": "repo",
}
`;

exports[`App should set failed check when coverage is below 100% 1`] = `
"<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💔 \`91.99%\`
Branches | 💔 \`93.75%\`
Functions | 💔 \`76.83%\`
Lines | 💔 \`92.61%\`"
`;

exports[`App should set success check when coverage is 100% 1`] = `
"<!-- commentType: \\"coverage-report\\" -->
### 💚 Coverage report

Type | Coverage
:-|-:
Statements | 💚 \`100.0%\`
Branches | 💚 \`100.0%\`
Functions | 💚 \`100.0%\`
Lines | 💚 \`100.0%\`"
`;
